# assignment_williams_lea

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.local.yml  docker-compose.production.yml  docker-compose.sonar.yml  manage.py  pyproject.toml  sonar-project.properties
.envs/.local/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/django/: Dockerfile  Dockerfile.dev  entrypoint  start  start-dev
docker/nginx/: Dockerfile
docker/postgres/: Dockerfile
docker/traefik/: Dockerfile  traefik.yml
http/: authors.http
requirements/: base.txt  local.txt  production.txt
src/apps/: conftest.py
src/apps/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
src/apps/pages/: apps.py  exceptions.py  urls.py  views.py
src/apps/pages/context_processors/: legislation_context.py
src/apps/pages/fetchers/: xml_fetcher.py
src/apps/pages/templates/pages/: about.html  transform.html
src/apps/pages/tests/: test_legislation_context.py  test_views.py  test_xml_fetcher.py  test_xslt_transformer.py
src/apps/pages/transformers/: xslt_transformer.py
src/apps/static/css/: project.css
src/apps/static/pages/: products.xml  style.xslt
src/apps/templates/: 400.html  500.html  base.html
src/apps/templates/components/: footer.html  header.html  nav.html
src/apps/templates/pages/: about.html  home.html  transform.html  transform2.html
src/apps/templates/pages/xslt/: legislation.xslt
src/apps/users/: admin.py  apps.py  models.py  urls.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/tests/: factories.py  test_admin.py
src/apps/utils/: pagination.py
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: base.py  local.py  production.py  test.py
src/constants/: status.py
src/exceptions/: base.py
src/locale/en_US/LC_MESSAGES/: django.po
src/locale/fr_FR/LC_MESSAGES/: django.po
src/locale/pt_BR/LC_MESSAGES/: django.po
src/middlewares/: exception_handler.py
src/middlewares/tests/: test_middlewares.py
